# src/main/resources/config/openapi.json
@@ -336,6 +336,12 @@
                 },
                 "parameters": []
             }
+        },
+        "/addmessage": {
+        	"get":{}
+        },
+        "/deletemessage": {
+        	"delete":{}
         }
         
     },
